--- a/Browser Folder/TingShuo/css/mycss.css
+++ b/Browser Folder/TingShuo/css/mycss.css
@@ -1,8 +1,10 @@
 .logo {
-    height: 50px;
+    height: 60px;
     border-radius: 200px;
-    margin-top: 0px;
-    margin-left: 100px;
+}
+.logo-footer{
+    height: 30px;
+    border-radius: 200px;
 }
 
 .logo-div{
@@ -11,12 +13,15 @@
 }
 
 .search{
-    float: right;
-    margin-top: 30px;
+    border:0px;
+    color: #d3d3d3;
+    border-bottom:#d3d3d3 1px solid;
+    width: 300px;
+    font-size: 14px;
 }
 
 .head{
-    box-shadow: 2px 2px 300px #66CCFF;
+    box-shadow: 2px 5px 300px #66CCFF;
 }
 
 @keyframes top{
@@ -30,7 +35,7 @@
 
 
 .top{
-    animation: top 15s infinite;
+    animation: top 25s infinite;
     background: #fff;
 }
 
@@ -39,9 +44,16 @@ body{
 }
 
 .daohang {
-    margin-left: 30px;
-    font-size: 18px;
+    font-size: 16px;
     text-align: center;
+    color: #525252;
+    text-decoration: none;
+    margin-left: 50px;
+    font-weight: 400;
+}
+.daohang:hover{
+    color: #000000;
+    text-decoration: none;
 }
 
 .header-button-shi {
@@ -61,8 +73,8 @@ body{
 
 .header-button-kong {
     background-color: #fff;
-    border: 1px solid #b3b3b3;
-    color: #b3b3b3;
+    border: 1px solid #adadad;
+    color: #adadad;
     text-align: center;
     -webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
@@ -71,13 +83,13 @@ body{
 
 .header-button-sousuo{
     border-radius: 5px;
-    width: 70px;
-    height: 30px;
+    width: 30px;
+    height: 25px;
     font-size: 14px;
 }
 
 .header-button-kong:hover{
-    background-color: #b3b3b3;
+    background-color: #adadad;
     color: white;
 }
 
@@ -85,7 +97,6 @@ body{
     border-radius: 0px;
     height: 30px;
     width: 40px;
-    margin-left: 10px;
     font-size: 11px;
 }
 
@@ -93,18 +104,44 @@ body{
     width: 100%;
     height: 400px;
     border-radius: 10px;
-    box-shadow: 0px 10px 30px #adadad;
+    box-shadow: 0px 10px 30px #8f8f8f;
 }
 
 .row-margin{
-    margin-top: 30px;
+    margin-top: 40px;
 }
 
 .course{
     border-radius: 10px;
-    box-shadow: 0px 1px 15px #d3d3d3
+    box-shadow: 0px 1px 15px #b8b8b8;
+}
+.course:hover{
+    box-shadow: 0px 1px 15px #929292;
 }
 
 .tuijian{
-    height: 40px;
+    height: 30px;
+}
+
+.text-a-black{
+    color: black;
+    text-decoration:none;
+
+}
+.text-a-black:hover{
+    color: black;
+    text-decoration:none;
+
+}
+
+#erweima div{
+    display: none;
+}
+#erweima:hover div{
+    display: block;
+}
+.erweima{
+    height: 100px;
+    width: 100px;
+    border: none;
 }
